Correction alignements navbar + ajout hero perso

--- a/css/custom.css
+++ b/css/custom.css
@@ -29,4 +29,5 @@ main {
 
 .navbar-brand {
 	font-family: "Abril Fatface", sans-serif;
+	font-size: 1.5em;
 }
